# starlite_rust_router

./: Cargo.toml  pyproject.toml  starlite_router.pyi
src/: lib.rs
